[project]
name = "agent-examples"
version = "0.1.0"
description = "Examples of how to use Llamastack to build agents"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "aiosqlite>=0.21.0",
    "anthropic>=0.75.0",
    "asyncpg>=0.31.0",
    "autoevals>=0.0.130",
    "boto3>=1.41.5",
    "chardet>=5.2.0",
    "chromadb-client>=1.3.5",
    "codeshield>=1.0.1",
    "datasets>=4.0.0",
    "einops>=0.8.1",
    "emoji>=2.15.0",
    "faiss-cpu>=1.13.0",
    "fastapi>=0.122.0",
    "fire>=0.7.1",
    "fireworks-ai<=0.17.16",
    "google-cloud-aiplatform>=1.128.0",
    "h11>=0.16.0",
    "httpx>=0.28.1",
    "huggingface-hub>=0.36.0",
    "langdetect>=1.0.9",
    "llama-stack>=0.3.3",
    "llama-stack-client>=0.3.3",
    "matplotlib>=3.10.7",
    "mcp>=1.8.1",
    "nltk>=3.9.2",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "opentelemetry-exporter-otlp-proto-http>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.11",
    "pymilvus[milvus-lite]>=2.4.10",
    "pymongo>=4.15.4",
    "pypdf>=6.4.0",
    "pythainlp>=5.1.2",
    "qdrant-client>=1.16.1",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "safetensors>=0.7.0",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.3",
    "sentencepiece>=0.2.1",
    "sqlalchemy[asyncio]>=2.0.44",
    "sqlite-vec>=0.1.6",
    "together>=1.5.30",
    "tokenizers>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.57.3",
    "tree-sitter>=0.25.2",
    "uvicorn>=0.38.0",
    "weaviate-client>=4.16.5",
]
